--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-js-getting-started",
   "version": "0.3.0",
-  "description": "A sample Node.js ",
+  "description": "A sample Node.js app using Express 4",
   "engines": {
     "node": "12.x"
   },
@@ -10,5 +10,6 @@
     "start": "node index.js",
     "test": "node test.js"
   }
+
 
 }
